--- a/index.css
+++ b/index.css
@@ -4,6 +4,38 @@
    =========================================== */
 
 /* ============================================
+   全局拖动防选择样式
+   ============================================ */
+
+/* 防止拖动节点时触发浏览器选择模式 */
+[data-drag-handle="true"] {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+}
+
+[data-drag-handle="true"] img,
+[data-drag-handle="true"] video {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+    pointer-events: none;
+}
+
+/* 画布拖动时禁用全局选择 */
+.cursor-grabbing,
+.cursor-grabbing * {
+    -webkit-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+}
+
+/* ============================================
    桌面端样式 - 使用030项目的标准布局
    ============================================ */
 
